Expand MySQL query support
Co-authored-by: Raditha Dissanayake <e4c5@users.noreply.github.com>